src/main/metadata-au/objects/MBK_Message_Template__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contents__c</fullName>
        <label>Contents</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID__c</fullName>
        <label>Template ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SMS/MMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KaKao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MBK Message Template</label>
    <nameField>
        <displayFormat>MMT-{000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBK Message Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>